<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.TelRegisterPageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.ugex.savelar.excompositedesign.Controls.AnimatePaintView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="@integer/login_page_head_img_weight"
            app:ani_ball_count="@integer/login_page_ball_count" />

        <EditText
            android:id="@+id/editTextTelNumber"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="@integer/login_page_other_line_weight"
            android:ems="10"
            android:hint="@string/login_page_edt_tel_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="@integer/login_page_other_line_weight"
            android:ems="10"
            android:hint="@string/please_input_password"

            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="@integer/login_page_other_line_weight"
            android:ems="10"
            android:hint="@string/reg_page_please_repeat_input_password"

            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="@integer/login_page_other_line_weight"
            android:background="@drawable/draw_my_button"
            android:onClick="onBtnRegisterCliked"
            android:text="@string/reg_page_reg_btn_text" />

        <FrameLayout
            android:id="@+id/viewSpaceHolder"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="@integer/login_page_space_holder_weight">

            <TextView
                android:id="@+id/textViewToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:onClick="onTvToLoginClicked"
                android:text="@string/tv_to_login" />
        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>